<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <java.version>1.8</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.fansqz.mirpc</groupId>
            <artifactId>learn</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <parent>
        <groupId>com.fansqz.mirpc</groupId>
        <artifactId>mi-rpc</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>framework</artifactId>
    <name>framework</name>
    <description>framework_module</description>

</project>